--- a/main1.css
+++ b/main1.css
@@ -1,29 +1,29 @@
-#container { /*container elem definiálása, középre igazítás, margó beállítás*/
+#container {
   width: 100vw;
   margin: 50px auto;
   text-align: center;
 }
 
 header {
-  margin-bottom: 50px; /*oldal tetejétől a behúzás, hogy szebb legyen*/
+  margin-bottom: 50px; 
 }
 
 h1 {
   font-size: 24px;
   font-weight: bold;
-  color: #8b66bc; /*h1 szöveg stílusa*/
+  color: black; 
 }
 
 #images {
-  width: 300px; /*képméretezés*/
+  width: 310px; 
   height: 375px;
   margin: 25px auto;
-  overflow: hidden; /*képek egymásra pozíciónálása, behúzás*/
+  overflow: hidden; 
   position: relative;
 }
 
 #images img {
-  width: 600px; /*méretek megadása*/
+  width: 700px;
   height: 375px;
   position: absolute; /*újabb pozícionálás az átfedés miatt*/
   left: -500px; /*balról hozza az új képet, ezért -*/
@@ -40,4 +40,13 @@ h1 {
 left: 0; /*kép igazítása, átlátszóság megszüntetése*/
 z-index: 8;
 opacity: 1;
+}
+
+a {
+  font-size: 25px;
+  color: black;
+}
+
+a:hover {
+  color: blue;
 }
