--- a/main.css
+++ b/main.css
@@ -27,25 +27,30 @@ body {
 }
 
 .head, .content {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
+
+.name-headline {
+  padding: 10px;
+}
 img {
-  width: 120px;
-  height: 120px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
 }
 .profile-image {
-  margin-top: 80px;
+  margin-top: 10%;
 }
 /* Contact links */
 
 .head, .about {
-  margin-bottom: 10%;
+  margin-bottom: 10px;
+  padding: 20px;
 }
 .content {
-  padding: 0;
-  margin-bottom: 0%;
+  padding: 20px;
+  margin-bottom: 20px;
 }
 
 body {
@@ -58,7 +63,6 @@ body {
 .profile-card {
   background-color: hsla(0, 0%, 100%, .5);
   border-radius: 50px;
-  box-shadow: hsla(204, 100%, 50%, .7) 10px 15px 10px;
 }    
 img {
   padding: 5px;
@@ -84,8 +88,7 @@ h1 {
 .gallery {
   background-color: lightgreen;
   color: black;
-  padding: 10px;
-  margin: 10px;
+  padding: 5px;
 }
 .gallery:hover {
   background-color: lightblue;
