--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ img {
 body {
   background: url('Assets/background.jpg')no-repeat center center fixed;
   background-size: cover;
-  font-family: Arial, sans-serif;
+  font-family: 'Times Neww Roman', sans-serif;
   font-size: 17px;
 }
 
