--- a/main1.css
+++ b/main1.css
@@ -1,6 +1,6 @@
 #container {
   width: 100vw;
-  margin: 50px auto;
+  margin: 0px auto;
   text-align: center;
 }
 
@@ -30,28 +30,40 @@ h1 {
 #images img {
   width: 700px;
   height: 375px;
-  position: absolute; /*újabb pozícionálás az átfedés miatt*/
-  left: -500px; /*balról hozza az új képet, ezért -*/
+  position: absolute; 
+  left: -500px; 
   top: 0;
-  z-index: 1; /*áttűnés efektért felel*/
-  opacity: 0; /*átlátszóság*/
-  transition: all linear 600ms; /* maga a slide effekt, a csúszás*/
+  z-index: 1; 
+  opacity: 0; 
+  transition: all linear 600ms; 
   -o-transition: all linear 600ms;
   -moz-transition: all linear 600ms;
   -webkit-transition: all linear 600ms;
 }
 
 #images img:target {
-left: 0; /*kép igazítása, átlátszóság megszüntetése*/
+left: 0; /
 z-index: 8;
 opacity: 1;
 }
 
 a {
-  font-size: 25px;
+  font-size: 30px;
   color: black;
 }
-
-a:hover {
-  color: blue;
+#images img:first-child {
+  left: 0; 
+  opacity: 1;
 }
+
+#button a {
+  text-decoration: none; 
+  border: 1px solid #aaaeb6;
+  padding: 5px 7px;
+  background: #dde2ea;
+}
+
+#button a:hover { 
+  background: blue;
+}
+
