--- a/main1.css
+++ b/main1.css
@@ -61,9 +61,13 @@ a {
   border: 1px solid #aaaeb6;
   padding: 5px 7px;
   background: #dde2ea;
+  border-radius: 50px;
 }
 
 #button a:hover { 
-  background: blue;
+  background: lightgreen;
 }
+
+
+
 
