--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ body {
 }    
 
 img {
-  padding: 2px;
+  padding: 3px;
   background-color: black;
 }
 
@@ -137,19 +137,22 @@ img {
 }
 
 .box {
-  position: absolute, fixed;
+  position: absolute;
   border-collapse: black, 1px solid;
   border-radius: 50px;
-}
-
-.box {
   top: 200px;
   left: 250px;
 }
 
+.social-icon1 {
+  position: absolute;
+  left: 15px;
+}
 
-
-
+.social-icon3 {
+  position: absolute;
+  right: 15px;
+}
   
 
   
