--- a/main.css
+++ b/main.css
@@ -82,7 +82,6 @@ span {
 
 h1 {
   font-size: 19px;
-  text-transform: uppercase;
 }
 
 button {
@@ -132,7 +131,7 @@ img {
    float: left;
 }
 
-.container {
+.profile-card {
   position: relative;
 }
 
@@ -140,20 +139,18 @@ img {
   position: absolute;
   border-collapse: black, 1px solid;
   border-radius: 50px;
-  top: 200px;
-  left: 250px;
+  top: 170px;
+  left: 200px;
 }
 
 .social-icon1 {
   position: absolute;
-  left: 15px;
+  left: 10px;
 }
 
 .social-icon3 {
   position: absolute;
-  right: 15px;
+  right: 10px;
 }
   
 
-  
-  
