--- a/main.css
+++ b/main.css
@@ -112,14 +112,14 @@ li {
   padding: 20px;
   }
 
-.social-icon {
+a {
   color: green;
   font-size: 30px;
   padding: 10px;
 }
   
 
-.social-icon:hover {
+a:hover {
   color: lightgreen;
 }
 
@@ -145,12 +145,12 @@ img {
 
 .social-icon1 {
   position: absolute;
-  left: 10px;
+  left: 5px;
 }
 
 .social-icon3 {
   position: absolute;
-  right: 10px;
+  right: 5px;
 }
-  
+
 
