--- a/main.css
+++ b/main.css
@@ -8,9 +8,9 @@
 }
 
 
-/* Pozíconálás */
+/*Compontent styles*/
 
-
+/*Main Header Styles*/
 .profile-card {
   width: 25.625rem;
   max-width: calc(100vw - 1.25rem);
@@ -132,7 +132,7 @@ a:hover {
 }
 
 img {
-   float: left;
+   float: none;
 }
 
 .profile-card {
@@ -153,3 +153,9 @@ img {
   top:0.625rem;
 }
 
+@media (min-width: 768px) {
+  img {
+    float: right;
+    }
+}
+}
