--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/* CSS reset */
+//* CSS reset */
 
 * {
   margin: 0;
@@ -9,7 +9,7 @@
 
 body {
   height: 100vh;
-  max-width: calc(100vw-0.625rem);
+  max-width: calc(100vw - 0.625rem);
   display: flex;
   justify-content: center;
   align-items: center;
