--- a/main.css
+++ b/main.css
@@ -71,20 +71,23 @@ h1 {
   font-size: 1.1875rem;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px)and (orientation: landscape){
   body {
-    color: brown;
+    color: green;
 }
 }
 
-@media (min-width: 1024px){
+@media (orientation: landscape) {
+  .profil-card {
+    height: 50%;
+}
+}
+
+@media (min-width: 1024px){ 
   body {
-    color: darkgreen;
+    color: orangered;
 }
 }
-
-
-/*Component Styles*/
 
 button {
   background-color: orange;
