--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ h1 {
   font-size: 1.1875rem;
 }
 
-@media (min-width: 768px) and (orientation: landscape) {
+@media (max-width: 768px) and (orientation: landscape) {
   body {
     color: green;
 }
@@ -83,27 +83,29 @@ h1 {
     }
 }
 
-@media (min-width: 1024px)and (orientation: landscape) { 
+@media (max-width: 1024px)and (orientation: landscape) { 
   body {
-    color: orange;
+    color: greenyellow;
 }
 }
 
-button {
+.btn {
   background-color: orange;
   color: black;
+  text-decoration: none;
+  text-align: center;
   padding: 0.625rem;
+  border: 0.0625rem solid transparent;
+  margin-bottom: 0,625rem;
   border-radius: 2.5rem;
-  top: 240px;
-  left: 270px;
+  top: 15rem;
+  left: 16.875rem;
   position: absolute;
-  border: 1px solid black;
 }
 
-button:hover {
+.btn:hover {
   background-color: lightgreen;
-  border-radius: 2.5rem;
-  transform: scale(1.2);
+  color: black;
   transition: all 0.5s ease-in-out;
 }
 
