--- a/main1.css
+++ b/main1.css
@@ -4,32 +4,44 @@
   text-align: center;
 }
 
+
+body {
+  height: 100vh;
+  background-color: black;
+}
+
 header {
   margin-bottom: 50px; 
 }
 
-h1 {
+h2 {
   font-size: 24px;
   font-weight: bold;
-  color: black; 
+  color: lightgreen; 
+  text-align: center;
 }
 
-#image0 {
-  width: 310px; 
-  height: 375px;
-  
+.text {
+  text-align: center;
+  color: orange;
 }
+
+image0 {
+  width: 410px; 
+  height: 475px;
+  }
+  
 #images {
-  width: 310px; 
-  height: 375px;
+  width: 410px; 
+  height: 475px;
   margin: 25px auto;
   overflow: hidden; 
   position: relative;
 }
 
 #images img {
-  width: 700px;
-  height: 375px;
+  width: 410px;
+  height: 475px;
   position: absolute; 
   left: -500px; 
   top: 0;
@@ -51,6 +63,7 @@ a {
   font-size: 30px;
   color: black;
 }
+
 #images img:first-child {
   left: 0; 
   opacity: 1;
@@ -60,14 +73,18 @@ a {
   text-decoration: none; 
   border: 1px solid #aaaeb6;
   padding: 5px 7px;
-  background: #dde2ea;
-  border-radius: 40px;
+  background-color: orange;
+  border-radius: 30px;
+  transition: background-color .15 easy-in-out;
 }
 
 #button a:hover { 
-  background: lightgreen;
+  background-color: lightgreen;
 }
 
+#button {
+  text-align: center;
+}
 
 
 
