--- a/main.css
+++ b/main.css
@@ -128,6 +128,12 @@ a:hover {
   }
 }
 
+@media (orientation: landscape) {
+  .profile-card, .profile-card>*{
+    zoom:95% !important;
+    }
+}
+
 a{
   position:relative;
 }
@@ -158,25 +164,13 @@ a:hover::after{
   100%{height:1rem;}
 }
 
-/*
-@media (min-width: 768px) and (orientation: landscape) {
-  body {
-    color: green;
-  }
-}
-
 @media (orientation: landscape) {
   .profile-card, .profile-card>*{
-    zoom:65% !important;
+    zoom:95% !important;
     }
 }
 
-@media (min-width: 1024px)and (orientation: landscape) {
-  body {
-    color: orange;
-  }
-}
-*/
+
 
 
 
