--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body {
   font-size: 1.125rem;
   background: url("Assets/Absztrakt.jpg") no-repeat center center fixed;
   background-size: cover;
+  perspective: 256px;
   }
 
 /*===  LAYOUTS STYLES  ===*/
@@ -110,30 +111,6 @@ a:hover {
   color: lightgreen;
 }
 
-@media (min-width:412px) and (min-height:869px) {
-  
-}
-@media (min-width:600px) and (min-height:960px) {
-  
-}
-@media (min-width:869px) and (min-height:412px) {
-  
-}
-@media (min-width:960px) and (min-height:600px) {
-  
-}
-@media (min-width:1366px) and (min-height:625px) {
-  body{
-    color:green;
-  }
-}
-
-@media (orientation: landscape) {
-  .profile-card, .profile-card>*{
-    zoom:95% !important;
-    }
-}
-
 a{
   position:relative;
 }
@@ -164,12 +141,23 @@ a:hover::after{
   100%{height:1rem;}
 }
 
-@media (orientation: landscape) {
+@media (min-width:412px) and (orientation:landscape) {
   .profile-card, .profile-card>*{
-    zoom:95% !important;
+    zoom:95%;
     }
 }
 
+@media (min-width:768) {
+  body{
+    color:green;
+    }
+  }
+  
+@media (min-width:1024px) {
+  body{
+    color:green;
+  }
+}
 
 
 
