--- a/main.css
+++ b/main.css
@@ -61,7 +61,7 @@ h1 {
   font-size: 1.1875rem;
 }
 .btn {
-  background-color: orange;
+  background-color: red;
   color: black;
   text-decoration: none;
   text-align: center;
