--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ h1 {
   position: absolute;
 }
 .btn:hover {
-  background-color: lightgreen;
+  background-color: orchid;
   color: black;
   transition: all 0.5s ease-in-out;
 }
