--- a/main.css
+++ b/main.css
@@ -65,7 +65,8 @@ h1 {
   color: black;
   text-decoration: none;
   text-align: center;
-  padding: 0.625rem;
+  height: .5rem;
+  width: 5rem;
   border: 0.0625rem solid transparent;
   margin-bottom: 0.625rem;
   border-radius: 2.5rem;
@@ -147,7 +148,7 @@ a:hover::after{
 
 @media (min-width:768) {
   body{
-    color:green;
+    color:orange;
     }
   }
   
