--- a/main.css
+++ b/main.css
@@ -65,9 +65,8 @@ h1 {
   color: black;
   text-decoration: none;
   text-align: center;
-  height: .5rem;
-  width: 5rem;
-  border: 0.0625rem solid transparent;
+  height: 2rem;
+  width: 6rem;
   margin-bottom: 0.625rem;
   border-radius: 2.5rem;
   margin: 0 auto;
