--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ h1 {
   text-align: center;
   height: 3rem;
   width: 7rem;
-  margin-bottom: 0.625rem;
+  margin-botto: 0.625rem;
   border-radius: 2.5rem;
   margin: 0 auto;
 }
