--- a/main.css
+++ b/main.css
@@ -45,8 +45,7 @@ img {
   width: 8.75rem;
   height: 6.875rem;
   border-radius: 50%;
-  padding: 0.1875rem;
-  background-color: black;
+  border:1px solid orange;
   float: right;
 }
 img:hover {
@@ -62,11 +61,11 @@ h1 {
 }
 .btn {
   background-color: orange;
-  color: black;
+  color: white;
   padding:2rem;
   text-decoration: none;
   text-align: center;
-  height: 3rem;
+  height: 1.5rem;
   width: 7rem;
   margin-botto: 0.625rem;
   border-radius: 2.5rem;
@@ -75,7 +74,7 @@ h1 {
 .btn:hover {
   background-color: orchid;
   color: black;
-  transition: all 0.5s ease-in-out;
+  opacity: .5;
 }
 p {
   text-align: center;
