--- a/main.css
+++ b/main.css
@@ -62,12 +62,11 @@ h1 {
 .btn {
   background-color: orange;
   color: white;
-  padding:2rem;
   text-decoration: none;
   text-align: center;
   height: 1rem;
   width: 7rem;
-  margin-botto: 0.625rem;
+  margin-bottom: 0.625rem;
   border-radius: 2.5rem;
   margin: 0 auto;
 }
