--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-//* CSS reset */
+1//* CSS reset */
 
 * {
   margin: 0;
@@ -64,7 +64,7 @@ h1 {
   color: white;
   text-decoration: none;
   text-align: center;
-  height: 2rem;
+  height: 1.5rem;
   width: 7rem;
   margin-bottom: 0.625rem;
   border-radius: 2.5rem;
