--- a/main.css
+++ b/main.css
@@ -59,15 +59,16 @@ span {
 h1 {
   font-size: 1.1875rem;
 }
+
 .btn {
   background-color: orange;
-  color: white;
+  color: black;
   text-decoration: none;
   text-align: center;
-  height: 1.5rem;
-  width: 7rem;
-  margin-bottom: 0.625rem;
+  padding: .5rem;
   border-radius: 2.5rem;
+  height:1.2rem;
+  width:7rem;
   margin: 0 auto;
 }
 .btn:hover {
@@ -77,6 +78,7 @@ h1 {
 }
 p {
   text-align: center;
+  margin:1rem;
 }
 ul {
   list-style-type: none; 
